Fixing some gaps, part IV

--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@
 #roomFormUpdate .mid select option:not(selected) { color: black; }
 
 /* Browser fixes */
-#browser.animate { bottom: 56px; padding-top: 114px; }
+#browser.animate { bottom: 3.5rem; padding-top: 110px; }
 #browser .browser-content { border-radius: 0; }
 span.close-browser { font-size: 1.125rem !important; padding-top: 1.2rem !important; }
 span.close-browser:before { content: "\e903"; }
